tests/NormalTests/paczka1/fuzzy1/51165818.err
Error in line 4: A101 A9 69,0
Error in line 6: CDmu6Z A9 38,9
Error in line 2: OOutTHSAna A9 25,1
